AC_INIT(cairoplot, 2.0)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_CC_C_O
AC_HEADER_STDC




AM_PROG_LIBTOOL




PKG_CHECK_MODULES(CAIRO, cairo)
PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(GTK, gtk+-2.0 )

AC_CONFIG_FILES([
	Makefile
	src/Makefile
        ])
AC_OUTPUT
